[gd_scene load_steps=6 format=3 uid="uid://c5sox2ilplqtl"]

[ext_resource type="Script" path="res://Scripts/pool_card_ui.gd" id="1_5kjai"]
[ext_resource type="Script" path="res://Scenes/pool_card_select.gd" id="2_tskwq"]
[ext_resource type="Texture2D" uid="uid://ch1v8r5p3cuem" path="res://Assets/UI/kenney_fantasy-ui-borders/PNG/Default/Border/panel-border-015.png" id="3_s6bcr"]
[ext_resource type="Texture2D" uid="uid://bac1v0af8gvfw" path="res://Assets/UI/kenney_fantasy-ui-borders/PNG/Default/Border/panel-border-007.png" id="7_13ji6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0c3m"]
size = Vector2(86, 160)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(86, 160)
layout_mode = 3
anchor_right = 0.095
anchor_bottom = 0.324
offset_right = -23.44
offset_bottom = -49.952
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(43, 80)
script = ExtResource("1_5kjai")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpriteCard" type="Sprite2D" parent="."]
position = Vector2(43, 80)
scale = Vector2(0.17, 0.17)

[node name="DropPoint_Detector" type="Area2D" parent="."]
collision_layer = 4
monitorable = false
script = ExtResource("2_tskwq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPoint_Detector"]
position = Vector2(43, 80)
shape = SubResource("RectangleShape2D_o0c3m")

[node name="Selected" type="Sprite2D" parent="DropPoint_Detector"]
visible = false
position = Vector2(43, 80)
scale = Vector2(2.08333, 3.66667)
texture = ExtResource("3_s6bcr")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.537255, 0.458824, 0.262745, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_13ji6")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPoint_Detector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPoint_Detector" to="." method="_on_drop_point_detector_area_exited"]
